# qlogix

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.override.yaml  compose.yaml  config.example.toml  pyproject.toml
.github/workflows/: python.yml
src/qlogix/: __init__.py  cli.py  config.py  logutil.py  main.py
src/qlogix/analyze/: __init__.py  ai.py  base.py  passthrough.py  stats.py
src/qlogix/filter/: base.py  dedup.py  group_by_source.py  groupbysource.py  nocolor.py  passthrough.py  safe.py  today.py
src/qlogix/pipeline/: factory.py  pipeline.py
src/qlogix/sink/: __init__.py  base.py  cache.py  file.py  stdout.py  telegram.py
src/qlogix/source/: api.py  base.py  command.py  file.py  http.py  ssh.py  stdin.py
src/qlogix/utils/: __init__.py  utils.py
